[gd_scene load_steps=9 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://TimerController.gd" type="Script" id=3]
[ext_resource path="res://Pause.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1260, 840 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 960, 540 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1280, 100 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 100, 1000 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 100, 1000 )

[node name="World" type="Node2D"]
position = Vector2( 960, 540 )
script = ExtResource( 1 )

[node name="BallStartPos" type="Node2D" parent="."]
position = Vector2( -480, -270 )

[node name="Pause" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 4 )

[node name="GlobalGravity" type="Area2D" parent="."]
space_override = 1
gravity_point = true
gravity_vec = Vector2( 0, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GlobalGravity"]
shape = SubResource( 2 )

[node name="GameArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea"]
shape = SubResource( 4 )

[node name="TopWall" type="StaticBody2D" parent="."]
position = Vector2( 0, -3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
position = Vector2( -2, -917 )
shape = SubResource( 3 )

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2( 1900, 300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2( -546, -308 )
shape = SubResource( 5 )

[node name="BottomWall" type="StaticBody2D" parent="."]
position = Vector2( 512, 1200 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall"]
position = Vector2( -516, -278 )
shape = SubResource( 3 )

[node name="LeftWall" type="StaticBody2D" parent="."]
position = Vector2( 403, -532 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2( -1748, 533 )
shape = SubResource( 6 )

[node name="TimerController" type="Node" parent="."]
script = ExtResource( 3 )

[node name="GravityIncreaseTimer" type="Timer" parent="TimerController"]

[node name="SideIncreaseTimer" type="Timer" parent="TimerController"]

[node name="HiddenSideIncreaseTimer" type="Timer" parent="TimerController"]

[node name="HiddenSideShuffleTimer" type="Timer" parent="TimerController"]

[connection signal="timeout" from="TimerController/GravityIncreaseTimer" to="TimerController" method="_on_gravity_increase_timeout"]
[connection signal="timeout" from="TimerController/SideIncreaseTimer" to="TimerController" method="_on_side_increase_timeout"]
[connection signal="timeout" from="TimerController/HiddenSideIncreaseTimer" to="TimerController" method="_on_hidden_side_increase_timeout"]
[connection signal="timeout" from="TimerController/HiddenSideShuffleTimer" to="TimerController" method="_on_hidden_side_shuffle_timeout"]
